include/Win64/Physics.ODEImport.hpp

struct TdMass;
struct TdxBody;
struct TdxWorld;
typedef float TdReal;
typedef System::StaticArray<float, 4> TdVector3;
typedef TdVector3 *PdVector3;
typedef System::StaticArray<float, 4> TdVector4;
typedef System::StaticArray<float, 12> TdMatrix3;
typedef TdMatrix3 *PdMatrix3;
typedef TdVector4 TdQuaternion;
typedef TdVector4 *PdQuaternion;
struct DECLSPEC_DRECORD TdMass
{
public:
	float mass;
	TdVector4 c;
	TdMatrix3 I;
};
typedef TdMass *PdMass;
typedef TdxGeom *PdxGeom;
typedef void __cdecl (*TdMovedCallback)(PdxGeom o1);
typedef TdxWorld *PdxWorld;
typedef TdxBody *PdxBody;
typedef TdxJoint *PdxJoint;
typedef PdxJoint TdJointID;
struct DECLSPEC_DRECORD TdxBody
{
public:
	TdObject baseObject;
	System::Byte Padding;
	TdxJoint *firstjoint;
	int flags;
	TdxGeom *geom;
	TdMass mass;
	TdMatrix3 invI;
	float invMass;
	TdxPosR posr;
	TdVector4 q;
	TdVector3 lvel;
	TdVector3 avel;
	TdVector3 facc;
	TdVector3 tacc;
	TdVector3 finite_rot_axis;
	TdxAutoDisable adis;
	float adis_timeleft;
	int adis_stepsleft;
	TdVector3 *average_lvel_buffer;
	TdVector3 *average_avel_buffer;
	unsigned average_counter;
	int average_ready;
	TdMovedCallback moved_callback;
	TdxDampingParameters dampingp;
	float max_angular_speed;
};
struct DECLSPEC_DRECORD TdxWorld
{
public:
	TdxBody *firstbody;
	TdxJoint *firstjoint;
	int nb;
	int nj;
	TdVector3 gravity;
	float global_erp;
	float global_cfm;
	TdxAutoDisable adis;
	int body_flags;
	TdxQuickStepParameters qs;
	TdxContactParameters contactp;
	TdxDampingParameters dampingp;
	float max_angular_speed;
};
//-- var, const, procedure ---------------------------------------------------
#define ODEDLL L"ode64s.dll"
extern "C" PdxWorld __cdecl dWorldCreate(void);
extern "C" void __cdecl dWorldDestroy(const PdxWorld World);
extern "C" float __cdecl dWorldGetCFM(const PdxWorld World);
extern "C" float __cdecl dWorldGetERP(const PdxWorld World);
extern "C" void __cdecl dWorldGetGravity(const PdxWorld World, TdVector3 &gravity);
extern "C" void __cdecl dWorldImpulseToForce(const PdxWorld World, const float stepsize, const float ix, const float iy, const float iz, TdVector3 &force);
extern "C" void __cdecl dWorldSetCFM(const PdxWorld World, float cfm);
extern "C" void __cdecl dWorldSetERP(const PdxWorld World, float erp);
extern "C" void __cdecl dWorldSetGravity(const PdxWorld World, const float x, const float y, const float z);
extern "C" void __cdecl dWorldSetContactMaxCorrectingVel(const PdxWorld World, const float vel);
extern "C" float __cdecl dWorldGetContactMaxCorrectingVel(const PdxWorld World);
extern "C" void __cdecl dWorldSetContactSurfaceLayer(const PdxWorld World, const float depth);
extern "C" float __cdecl dWorldGetContactSurfaceLayer(const PdxWorld World);
extern "C" void __cdecl dWorldExportDIF(const PdxWorld World, unsigned fileHandle, const char * world_name);
extern "C" float __cdecl dWorldGetLinearDampingThreshold(const PdxWorld World);
extern "C" void __cdecl dWorldSetLinearDampingThreshold(const PdxWorld World, const float threshold);
extern "C" float __cdecl dWorldGetAngularDampingThreshold(const PdxWorld World);
extern "C" void __cdecl dWorldSetAngularDampingThreshold(const PdxWorld World, const float threshold);
extern "C" float __cdecl dWorldGetLinearDamping(const PdxWorld World);
extern "C" void __cdecl dWorldSetLinearDamping(const PdxWorld World, const float scale);
extern "C" float __cdecl dWorldGetAngularDamping(const PdxWorld World);
extern "C" void __cdecl dWorldSetAngularDamping(const PdxWorld World, const float scale);
extern "C" void __cdecl dWorldSetDamping(const PdxWorld World, const float linear_scale, const float angular_scale);
extern "C" float __cdecl dWorldGetMaxAngularSpeed(const PdxWorld World);
extern "C" void __cdecl dWorldSetMaxAngularSpeed(const PdxWorld World, const float max_speed);
extern "C" void __cdecl dWorldStep(const PdxWorld World, const float stepsize);
extern "C" void __cdecl dWorldQuickStep(const PdxWorld World, const float stepsize);
extern "C" void __cdecl dWorldSetQuickStepNumIterations(const PdxWorld World, const int num);
extern "C" int __cdecl dWorldGetQuickStepNumIterations(const PdxWorld World);
extern "C" void __cdecl dWorldSetQuickStepW(const PdxWorld World, const float param);
extern "C" float __cdecl dWorldGetQuickStepW(const PdxWorld World);
extern "C" float __cdecl dWorldGetAutoDisableLinearAverageThreshold(const PdxWorld World);
extern "C" void __cdecl dWorldSetAutoDisableLinearAverageThreshold(const PdxWorld World, float linear_average_threshold);
extern "C" float __cdecl dWorldGetAutoDisableAngularAverageThreshold(const PdxWorld World);
extern "C" void __cdecl dWorldSetAutoDisableAngularAverageThreshold(const PdxWorld World, float linear_average_threshold);
extern "C" float __cdecl dWorldGetAutoDisableAverageSamplesCount(const PdxWorld World);
extern "C" void __cdecl dWorldSetAutoDisableAverageSamplesCount(const PdxWorld World, float linear_average_threshold);
extern "C" float __cdecl dWorldGetAutoDisableLinearThreshold(const PdxWorld World);
extern "C" void __cdecl dWorldSetAutoDisableLinearThreshold(const PdxWorld World, float linThreshold);
extern "C" float __cdecl dWorldGetAutoDisableAngularThreshold(const PdxWorld World);
extern "C" void __cdecl dWorldSetAutoDisableAngularThreshold(const PdxWorld World, float angThreshold);
extern "C" int __cdecl dWorldGetAutoDisableSteps(const PdxWorld World);
extern "C" void __cdecl dWorldSetAutoDisableSteps(const PdxWorld World, int steps);
extern "C" float __cdecl dWorldGetAutoDisableTime(const PdxWorld World);
extern "C" void __cdecl dWorldSetAutoDisableTime(const PdxWorld World, float time);
extern "C" int __cdecl dWorldGetAutoDisableFlag(const PdxWorld World);
extern "C" void __cdecl dWorldSetAutoDisableFlag(const PdxWorld World, int do_auto_disable);
extern "C" void __cdecl dBodyAddForce(const PdxBody body, const float fx, const float fy, const float fz);
extern "C" void __cdecl dBodyAddForceAtPos(const PdxBody body, const float fx, const float fy, const float fz, const float px, const float py, const float pz);
extern "C" void __cdecl dBodyAddForceAtRelPos(const PdxBody body, const float fx, const float fy, const float fz, const float px, const float py, const float pz);
extern "C" void __cdecl dBodyAddRelForce(const PdxBody body, const float fx, const float fy, const float fz);
extern "C" void __cdecl dBodyAddRelForceAtPos(const PdxBody body, const float fx, const float fy, const float fz, const float px, const float py, const float pz);
extern "C" void __cdecl dBodyAddRelForceAtRelPos(const PdxBody body, const float fx, const float fy, const float fz, const float px, const float py, const float pz);
extern "C" void __cdecl dBodyAddRelTorque(const PdxBody body, const float fx, const float fy, const float fz);
extern "C" void __cdecl dBodyAddTorque(const PdxBody body, const float fx, const float fy, const float fz);
extern "C" PdxBody __cdecl dBodyCreate(const PdxWorld World);
extern "C" void __cdecl dBodyDestroy(const PdxBody body);
extern "C" void __cdecl dBodyDisable(const PdxBody body);
extern "C" void __cdecl dBodyEnable(const PdxBody body);
extern "C" PdVector3 __cdecl dBodyGetAngularVel(const PdxBody body);
extern "C" void __cdecl dBodyGetFiniteRotationAxis(const PdxBody body, TdVector3 &result);
extern "C" int __cdecl dBodyGetFiniteRotationMode(const PdxBody body);
extern "C" PdVector3 __cdecl dBodyGetForce(const PdxBody body);
extern "C" int __cdecl dBodyGetGravityMode(const PdxBody body);
extern "C" PdxJoint __cdecl dBodyGetJoint(const PdxBody body, const int index);
extern "C" PdVector3 __cdecl dBodyGetLinearVel(const PdxBody body);
extern "C" void __cdecl dBodyGetMass(const PdxBody body, TdMass &mass);
extern "C" int __cdecl dBodyGetNumJoints(const PdxBody body);
extern "C" void __cdecl dBodyGetPointVel(const PdxBody body, const float px, const float py, const float pz, TdVector3 &result);
extern "C" void __cdecl dBodyGetPosRelPoint(const PdxBody body, const float px, const float py, const float pz, TdVector3 &result);
extern "C" PdVector3 __cdecl dBodyGetPosition(const PdxBody body);
extern "C" PdQuaternion __cdecl dBodyGetQuaternion(const PdxBody body);
extern "C" void __cdecl dBodyGetRelPointPos(const PdxBody body, const float px, const float py, const float pz, TdVector3 &result);
extern "C" void __cdecl dBodyGetRelPointVel(const PdxBody body, const float px, const float py, const float pz, TdVector3 &result);
extern "C" PdMatrix3 __cdecl dBodyGetRotation(const PdxBody body);
extern "C" PdVector3 __cdecl dBodyGetTorque(const PdxBody body);
extern "C" int __cdecl dBodyIsEnabled(const PdxBody body);
extern "C" void __cdecl dBodySetAngularVel(const PdxBody body, const float x, const float y, const float z);
extern "C" void __cdecl dBodySetFiniteRotationAxis(const PdxBody body, const float x, const float y, const float z);
extern "C" void __cdecl dBodySetFiniteRotationMode(const PdxBody body, const int mode);
extern "C" void __cdecl dBodySetForce(const PdxBody body, const float x, const float y, const float z);
extern "C" void __cdecl dBodySetGravityMode(const PdxBody body, const int mode);
extern "C" void __cdecl dBodySetLinearVel(const PdxBody body, const float x, const float y, const float z);
extern "C" void __cdecl dBodySetMass(const PdxBody body, const PdMass mass);
extern "C" void __cdecl dBodySetPosition(const PdxBody body, const float x, const float y, const float z);
extern "C" void __cdecl dBodySetQuaternion(const PdxBody body, const TdVector4 &q);
extern "C" void __cdecl dBodySetRotation(const PdxBody body, const TdMatrix3 &R);
extern "C" void __cdecl dBodySetTorque(const PdxBody body, const float x, const float y, const float z);
extern "C" void __cdecl dBodyVectorFromWorld(const PdxBody body, const float px, const float py, const float pz, TdVector3 &result);
extern "C" void __cdecl dBodyVectorToWorld(const PdxBody body, const float px, const float py, const float pz, TdVector3 &result);
extern "C" void __cdecl dBodySetData(const PdxBody body, void * data);
extern "C" void * __cdecl dBodyGetData(const PdxBody body);
extern "C" void __cdecl dBodySetMovedCallback(const PdxBody body, TdMovedCallback callback);
extern "C" void __cdecl dBodyCopyPosition(const PdxBody body, const TdVector3 &pos);
extern "C" void __cdecl dBodyCopyRotation(const PdxBody body, const TdMatrix3 &R);
extern "C" void __cdecl dBodyCopyQuaternion(const PdxBody body, const TdVector4 &quat);
extern "C" void __cdecl dBodySetLinearDamping(const PdxBody body, float scale);
extern "C" float __cdecl dBodyGetLinearDamping(const PdxBody body);
extern "C" void __cdecl dBodySetAngularDamping(const PdxBody body, float scale);
extern "C" float __cdecl dBodyGetAngularDamping(const PdxBody body);
extern "C" void __cdecl dBodySetDamping(const PdxBody body, float linear_scale, float angular_scale);
extern "C" float __cdecl dBodyGetLinearDampingThreshold(const PdxBody body);
extern "C" void __cdecl dBodySetLinearDampingThreshold(const PdxBody body, float threshold);
extern "C" float __cdecl dBodyGetAngularDampingThreshold(const PdxBody body);
extern "C" void __cdecl dBodySetAngularDampingThreshold(const PdxBody body, float threshold);
extern "C" void __cdecl dBodySetDampingDefaults(const PdxBody body, float threshold);
extern "C" void __cdecl dBodySetMaxAngularSpeed(const PdxBody body, float max_speed);
extern "C" float __cdecl dBodyGetMaxAngularSpeed(const PdxBody body);