Source/Physics.ODEImport.pas


// ----- dWorld -----
function dWorldCreate: PdxWorld; cdecl; external ODEDLL;
procedure dWorldDestroy(const World: PdxWorld); cdecl; external ODEDLL;
function dWorldGetCFM(const World: PdxWorld): TdReal; cdecl; external ODEDLL;
function dWorldGetERP(const World: PdxWorld): TdReal; cdecl; external ODEDLL;
procedure dWorldGetGravity(const World: PdxWorld; var gravity: TdVector3);
  cdecl; external ODEDLL;
procedure dWorldImpulseToForce(const World: PdxWorld;
  const stepsize, ix, iy, iz: TdReal; var force: TdVector3); cdecl;
  external ODEDLL;
procedure dWorldSetCFM(const World: PdxWorld; cfm: TdReal); cdecl;
  external ODEDLL;
procedure dWorldSetERP(const World: PdxWorld; erp: TdReal); cdecl;
  external ODEDLL;
procedure dWorldSetGravity(const World: PdxWorld; const x, y, z: TdReal); cdecl;
  external ODEDLL;
procedure dWorldSetContactMaxCorrectingVel(const World: PdxWorld;
  const vel: TdReal); cdecl; external ODEDLL;
function dWorldGetContactMaxCorrectingVel(const World: PdxWorld): TdReal; cdecl;
  external ODEDLL;
procedure dWorldSetContactSurfaceLayer(const World: PdxWorld;
  const depth: TdReal); cdecl; external ODEDLL;
function dWorldGetContactSurfaceLayer(const World: PdxWorld): TdReal; cdecl;
  external ODEDLL;
procedure dWorldExportDIF(const World: PdxWorld; fileHandle: cardinal;
  const world_name: PAnsiChar); cdecl; external ODEDLL;

// Damping
function dWorldGetLinearDampingThreshold(const World: PdxWorld): TdReal; cdecl;
  external ODEDLL;
procedure dWorldSetLinearDampingThreshold(const World: PdxWorld;
  const threshold: TdReal); cdecl; external ODEDLL;
function dWorldGetAngularDampingThreshold(const World: PdxWorld): TdReal; cdecl;
  external ODEDLL;
procedure dWorldSetAngularDampingThreshold(const World: PdxWorld;
  const threshold: TdReal); cdecl; external ODEDLL;
function dWorldGetLinearDamping(const World: PdxWorld): TdReal; cdecl;
  external ODEDLL;
procedure dWorldSetLinearDamping(const World: PdxWorld; const scale: TdReal);
  cdecl; external ODEDLL;
function dWorldGetAngularDamping(const World: PdxWorld): TdReal; cdecl;
  external ODEDLL;
procedure dWorldSetAngularDamping(const World: PdxWorld; const scale: TdReal);
  cdecl; external ODEDLL;
procedure dWorldSetDamping(const World: PdxWorld;
  const linear_scale, angular_scale: TdReal); cdecl; external ODEDLL;
function dWorldGetMaxAngularSpeed(const World: PdxWorld): TdReal; cdecl;
  external ODEDLL;
procedure dWorldSetMaxAngularSpeed(const World: PdxWorld;
  const max_speed: TdReal); cdecl; external ODEDLL;
// Step
procedure dWorldStep(const World: PdxWorld; const stepsize: TdReal); cdecl;
  external ODEDLL;
// QuickStep
procedure dWorldQuickStep(const World: PdxWorld; const stepsize: TdReal); cdecl;
  external ODEDLL;
procedure dWorldSetQuickStepNumIterations(const World: PdxWorld;
  const num: Integer); cdecl; external ODEDLL;
function dWorldGetQuickStepNumIterations(const World: PdxWorld): Integer; cdecl;
  external ODEDLL;
procedure dWorldSetQuickStepW(const World: PdxWorld; const param: TdReal);
  cdecl; external ODEDLL;
function dWorldGetQuickStepW(const World: PdxWorld): TdReal; cdecl;
  external ODEDLL;
// Auto-disable functions
function dWorldGetAutoDisableLinearAverageThreshold(const World: PdxWorld)
  : TdReal; cdecl; external ODEDLL;
procedure dWorldSetAutoDisableLinearAverageThreshold(const World: PdxWorld;
  linear_average_threshold: TdReal); cdecl; external ODEDLL;
function dWorldGetAutoDisableAngularAverageThreshold(const World: PdxWorld)
  : TdReal; cdecl; external ODEDLL;
procedure dWorldSetAutoDisableAngularAverageThreshold(const World: PdxWorld;
  linear_average_threshold: TdReal); cdecl; external ODEDLL;
function dWorldGetAutoDisableAverageSamplesCount(const World: PdxWorld): TdReal;
  cdecl; external ODEDLL;
procedure dWorldSetAutoDisableAverageSamplesCount(const World: PdxWorld;
  linear_average_threshold: TdReal); cdecl; external ODEDLL;

function dWorldGetAutoDisableLinearThreshold(const World: PdxWorld): TdReal;
  cdecl; external ODEDLL;
procedure dWorldSetAutoDisableLinearThreshold(const World: PdxWorld;
  linThreshold: TdReal); cdecl; external ODEDLL;
function dWorldGetAutoDisableAngularThreshold(const World: PdxWorld): TdReal;
  cdecl; external ODEDLL;
procedure dWorldSetAutoDisableAngularThreshold(const World: PdxWorld;
  angThreshold: TdReal); cdecl; external ODEDLL;
function dWorldGetAutoDisableSteps(const World: PdxWorld): Integer; cdecl;
  external ODEDLL;
procedure dWorldSetAutoDisableSteps(const World: PdxWorld; steps: Integer);
  cdecl; external ODEDLL;
function dWorldGetAutoDisableTime(const World: PdxWorld): TdReal; cdecl;
  external ODEDLL;
procedure dWorldSetAutoDisableTime(const World: PdxWorld; time: TdReal); cdecl;
  external ODEDLL;
function dWorldGetAutoDisableFlag(const World: PdxWorld): Integer; cdecl;
  external ODEDLL;
procedure dWorldSetAutoDisableFlag(const World: PdxWorld;
  do_auto_disable: Integer); cdecl; external ODEDLL;

// ----- dBody -----
procedure dBodyAddForce(const body: PdxBody; const fx, fy, fz: TdReal); cdecl;
  external ODEDLL;
procedure dBodyAddForceAtPos(const body: PdxBody;
  const fx, fy, fz, px, py, pz: TdReal); cdecl; external ODEDLL;
procedure dBodyAddForceAtRelPos(const body: PdxBody;
  const fx, fy, fz, px, py, pz: TdReal); cdecl; external ODEDLL;
procedure dBodyAddRelForce(const body: PdxBody; const fx, fy, fz: TdReal);
  cdecl; external ODEDLL;
procedure dBodyAddRelForceAtPos(const body: PdxBody;
  const fx, fy, fz, px, py, pz: TdReal); cdecl; external ODEDLL;
procedure dBodyAddRelForceAtRelPos(const body: PdxBody;
  const fx, fy, fz, px, py, pz: TdReal); cdecl; external ODEDLL;
procedure dBodyAddRelTorque(const body: PdxBody; const fx, fy, fz: TdReal);
  cdecl; external ODEDLL;
procedure dBodyAddTorque(const body: PdxBody; const fx, fy, fz: TdReal); cdecl;
  external ODEDLL;

function dBodyCreate(const World: PdxWorld): PdxBody; cdecl; external ODEDLL;
procedure dBodyDestroy(const body: PdxBody); cdecl; external ODEDLL;
procedure dBodyDisable(const body: PdxBody); cdecl; external ODEDLL;
procedure dBodyEnable(const body: PdxBody); cdecl; external ODEDLL;
function dBodyGetAngularVel(const body: PdxBody): PdVector3; cdecl;
  external ODEDLL;
procedure dBodyGetFiniteRotationAxis(const body: PdxBody;
  var result: TdVector3); cdecl; external ODEDLL;
function dBodyGetFiniteRotationMode(const body: PdxBody): Integer; cdecl;
  external ODEDLL;
function dBodyGetForce(const body: PdxBody): PdVector3; cdecl; external ODEDLL;
function dBodyGetGravityMode(const body: PdxBody): Integer; cdecl;
  external ODEDLL;
function dBodyGetJoint(const body: PdxBody; const index: Integer): TdJointID;
  cdecl; external ODEDLL;
function dBodyGetLinearVel(const body: PdxBody): PdVector3; cdecl;
  external ODEDLL;
procedure dBodyGetMass(const body: PdxBody; var mass: TdMass); cdecl;
  external ODEDLL;
function dBodyGetNumJoints(const body: PdxBody): Integer; cdecl;
  external ODEDLL;
procedure dBodyGetPointVel(const body: PdxBody; const px, py, pz: TdReal;
  var result: TdVector3); cdecl; external ODEDLL;
procedure dBodyGetPosRelPoint(const body: PdxBody; const px, py, pz: TdReal;
  var result: TdVector3); cdecl; external ODEDLL;
function dBodyGetPosition(const body: PdxBody): PdVector3; cdecl;
  external ODEDLL;
function dBodyGetQuaternion(const body: PdxBody): PdQuaternion; cdecl;
  external ODEDLL;
procedure dBodyGetRelPointPos(const body: PdxBody; const px, py, pz: TdReal;
  var result: TdVector3); cdecl; external ODEDLL;
procedure dBodyGetRelPointVel(const body: PdxBody; const px, py, pz: TdReal;
  var result: TdVector3); cdecl; external ODEDLL;
function dBodyGetRotation(const body: PdxBody): PdMatrix3; cdecl;
  external ODEDLL;
function dBodyGetTorque(const body: PdxBody): PdVector3; cdecl; external ODEDLL;
function dBodyIsEnabled(const body: PdxBody): Integer; cdecl; external ODEDLL;
procedure dBodySetAngularVel(const body: PdxBody; const x, y, z: TdReal); cdecl;
  external ODEDLL;
procedure dBodySetFiniteRotationAxis(const body: PdxBody;
  const x, y, z: TdReal); cdecl; external ODEDLL;
procedure dBodySetFiniteRotationMode(const body: PdxBody; const mode: Integer);
  cdecl; external ODEDLL;
procedure dBodySetForce(const body: PdxBody; const x, y, z: TdReal); cdecl;
  external ODEDLL;
procedure dBodySetGravityMode(const body: PdxBody; const mode: Integer); cdecl;
  external ODEDLL;
procedure dBodySetLinearVel(const body: PdxBody; const x, y, z: TdReal); cdecl;
  external ODEDLL;
procedure dBodySetMass(const body: PdxBody; const mass: PdMass); cdecl;
  external ODEDLL;
procedure dBodySetPosition(const body: PdxBody; const x, y, z: TdReal); cdecl;
  external ODEDLL;
procedure dBodySetQuaternion(const body: PdxBody; const q: TdQuaternion); cdecl;
  external ODEDLL;
procedure dBodySetRotation(const body: PdxBody; const R: TdMatrix3); cdecl;
  external ODEDLL;
procedure dBodySetTorque(const body: PdxBody; const x, y, z: TdReal); cdecl;
  external ODEDLL;
procedure dBodyVectorFromWorld(const body: PdxBody; const px, py, pz: TdReal;
  var result: TdVector3); cdecl; external ODEDLL;
procedure dBodyVectorToWorld(const body: PdxBody; const px, py, pz: TdReal;
  var result: TdVector3); cdecl; external ODEDLL;
procedure dBodySetData(const body: PdxBody; data: pointer); cdecl;
  external ODEDLL;
function dBodyGetData(const body: PdxBody): pointer; cdecl; external ODEDLL;
procedure dBodySetMovedCallback(const body: PdxBody; callback: TdMovedCallback);
  cdecl; external ODEDLL;
procedure dBodyCopyPosition(const body: PdxBody; const pos: TdVector3); cdecl;
  external ODEDLL;
procedure dBodyCopyRotation(const body: PdxBody; const R: TdMatrix3); cdecl;
  external ODEDLL;
procedure dBodyCopyQuaternion(const body: PdxBody; const quat: TdQuaternion);
  cdecl; external ODEDLL;

// damping functions
procedure dBodySetLinearDamping(const body: PdxBody; scale: TdReal); cdecl;
  external ODEDLL;
function dBodyGetLinearDamping(const body: PdxBody): TdReal; cdecl;
  external ODEDLL;
procedure dBodySetAngularDamping(const body: PdxBody; scale: TdReal); cdecl;
  external ODEDLL;
function dBodyGetAngularDamping(const body: PdxBody): TdReal; cdecl;
  external ODEDLL;
procedure dBodySetDamping(const body: PdxBody;
  linear_scale, angular_scale: TdReal); cdecl; external ODEDLL;
function dBodyGetLinearDampingThreshold(const body: PdxBody): TdReal; cdecl;
  external ODEDLL;
procedure dBodySetLinearDampingThreshold(const body: PdxBody;
  threshold: TdReal); cdecl; external ODEDLL;
function dBodyGetAngularDampingThreshold(const body: PdxBody): TdReal; cdecl;
  external ODEDLL;
procedure dBodySetAngularDampingThreshold(const body: PdxBody;
  threshold: TdReal); cdecl; external ODEDLL;
procedure dBodySetDampingDefaults(const body: PdxBody; threshold: TdReal);
  cdecl; external ODEDLL;
procedure dBodySetMaxAngularSpeed(const body: PdxBody; max_speed: TdReal);
  cdecl; external ODEDLL;
function dBodyGetMaxAngularSpeed(const body: PdxBody): TdReal; cdecl;
  external ODEDLL;
